# zai-sim

./: Cargo.toml  FINDINGS.md  README.md  RESEARCH_SUMMARY.md
data/: black_thursday_2020_hourly.csv  covid_initial_2020_hourly.csv  ftx_collapse_2022_hourly.csv  luna_ust_2022_hourly.csv  may_2021_crash_hourly.csv  rally_2024_hourly.csv
docs/: mathematical_specification.md
outputs/: ZaiExplainer.jsx  index.html  package-lock.json  package.json
reports/: bank_run.html  black_thursday.html  black_thursday_default.html  black_thursday_oracle_comparison.html  bull_market.html  combined_stress.html  demand_shock.html  flash_crash.html  index.html  liquidity_crisis.html  miner_capitulation.html  oracle_comparison.html  sequencer_downtime.html  steady_state.html  sustained_bear.html  twap_manipulation.html
src/: agents.rs  amm.rs  cdp.rs  circuit_breaker.rs  controller.rs  data_fetcher.rs  historical.rs  lib.rs  liquidation.rs  main.rs  output.rs  report.rs  scenario.rs  scenarios.rs  sweep.rs
tests/: agent_tests.rs  amm_fee_sensitivity_test.rs  amm_liquidation_test.rs  amm_tests.rs  arber_degradation_test.rs  arber_replenish_test.rs  block_time_sensitivity_test.rs  bootstrap_test.rs  cdp_tests.rs  circuit_breaker_tests.rs  controller_tests.rs  cr_sensitivity_test.rs  duration_honesty_test.rs  economic_attack_test.rs  final_reports_test.rs  full_suite_5m_test.rs  full_suite_test.rs  graduated_liquidation_test.rs  griefing_mitigation_test.rs  high_liq_death_spiral_test.rs  historical_proxy_test.rs  historical_replay_test.rs  integration_test.rs  liquidation_tests.rs  (+19 more)
(+337 files in other folders)
