[package]
name = "zai-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
rand = "0.8"
rand_distr = "0.4"
rayon = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking", "json"] }
chrono = "0.4"
toml = "0.8"

[dev-dependencies]
approx = "0.5"
